--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1,7 +1,25 @@
 % This file was created with JabRef 2.10.
 % Encoding: GBK
-
-
+@article{feng2013nonsingular,
+  title={On nonsingular terminal sliding-mode control of nonlinear systems},
+  author={Feng, Yong and Yu, Xinghuo and Han, Fengling},
+  journal={Automatica},
+  volume={49},
+  number={6},
+  pages={1715--1722},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{moulay2006finite,
+  title={Finite time stability and stabilization of a class of continuous systems},
+  author={Moulay, Emmanuel and Perruquetti, Wilfrid},
+  journal={Journal of Mathematical Analysis and Applications},
+  volume={323},
+  number={2},
+  pages={1430--1443},
+  year={2006},
+  publisher={Elsevier}
+}
 @Article{Aggoune1994Design,
   Title                    = {Design of variable structure voltage regulator using pole assignment technique},
   Author                   = {Aggoune, M. E. and Boudjemaa, F. and Bensenouci, A. and Hellal, A. and Elmesai, M. R. and Vadari, S. V.},
