--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1,5 +1,15 @@
 % This file was created with JabRef 2.10.
 % Encoding: GBK
+@article{feng2002non,
+  title={Non-singular terminal sliding mode control of rigid manipulators},
+  author={Feng, Yong and Yu, Xinghuo and Man, Zhihong},
+  journal={Automatica},
+  volume={38},
+  number={12},
+  pages={2159--2167},
+  year={2002},
+  publisher={Elsevier}
+}
 @article{feng2013nonsingular,
   title={On nonsingular terminal sliding-mode control of nonlinear systems},
   author={Feng, Yong and Yu, Xinghuo and Han, Fengling},
